welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:41: error: Unmatched closing brace '}' ignored here
} 
^Array2:43: error: eof expected but '}' found.
}
^